c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/extra_credit/label_is_not_block.c
int main(void) {
    int a = 0;
    int b = 0;
    // a label does not start a new block, so you can't use it
    // to delineate a multi-statement loop body
    do
    do_body:
        a = a + 1;
        b = b - 1;
    while (a < 10)
        ;
    return 0;
}